testdata/fixtures/audit/positive/exec_user_input_js_execsync.js
const child_process = require("child_process");

function runCommandSync(cmd) {
  return child_process.execSync(cmd);
}
