testdata/fixtures/audit/negative/eval_user_input_neg_unrelated_identifier_js.js
const evaluation = 5;
console.log(evaluation);
